# MIDAS2

./: MIDAS2.py  README.md  custom_loss.py  dataset.py  mixed_activation.py  processing.py  pyproject.toml  test_mar.py  test_run.py  utils.py
.github/workflows/: pylint.yml
MIDAS2/: MIDAS2.py  custom_loss.py  dataset.py  mixed_activation.py  model.py  processing.py  utils.py
tests/: test_mar.py  test_profiler.py  test_run.py
