[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "MIDAS2"
version = "0.1.0"
authors = [
  { name="Thomas Robinson", email="t.robinson7@lse.ac.uk" },
  { name="Ranjit Lall", email="ranjit.lall@politics.ox.ac.uk" },
]
description = "Multiple Imputation using Denoising Autoencoders"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "statsmodel",
    "numpy",
    "pandas",
    "scipy",
    "torch", 
]

[project.urls]
Homepage = "https://github.com/MIDASverse/MIDAS2"
Issues = "https://github.com/MIDASverse/MIDAS2/issues"